--- a/public/output.css
+++ b/public/output.css
@@ -569,6 +569,10 @@ video {
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
@@ -613,6 +617,10 @@ video {
   z-index: 40;
 }
 
+.z-\[-1\]{
+  z-index: -1;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -651,6 +659,18 @@ video {
   margin-left: 33%;
 }
 
+.mt-32{
+  margin-top: 8rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -675,6 +695,10 @@ video {
   height: 0px;
 }
 
+.h-32{
+  height: 8rem;
+}
+
 .w-5\/6{
   width: 83.333333%;
 }
@@ -689,6 +713,14 @@ video {
 
 .w-\[300px\]{
   width: 300px;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .max-w-\[400px\]{
@@ -741,6 +773,10 @@ video {
 
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-32{
+  gap: 8rem;
 }
 
 .rounded-full{
@@ -836,6 +872,14 @@ video {
   padding-right: 0px;
 }
 
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pb-24{
+  padding-bottom: 6rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -868,6 +912,16 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -884,6 +938,11 @@ video {
 .text-yellow{
   --tw-text-opacity: 1;
   color: rgb(253 204 73 / var(--tw-text-opacity));
+}
+
+.text-red{
+  --tw-text-opacity: 1;
+  color: rgb(220 68 146 / var(--tw-text-opacity));
 }
 
 .transition{
@@ -941,6 +1000,16 @@ body,
 .before\:-top-\[70px\]::before{
   content: var(--tw-content);
   top: -70px;
+}
+
+.before\:-top-10::before{
+  content: var(--tw-content);
+  top: -2.5rem;
+}
+
+.before\:-left-10::before{
+  content: var(--tw-content);
+  left: -2.5rem;
 }
 
 .before\:z-\[-1\]::before{
@@ -1065,12 +1134,24 @@ body,
     margin-top: 8rem;
   }
 
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+
   .md\:flex{
     display: flex;
   }
 
   .md\:h-full{
     height: 100%;
+  }
+
+  .md\:w-3\/4{
+    width: 75%;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
 
   .md\:max-w-\[600px\]{
@@ -1087,6 +1168,10 @@ body,
 
   .md\:justify-between{
     justify-content: space-between;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
   }
 
   .md\:text-start{
